--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "8.5.6"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@simplewebauthn/browser": "^9.0.1",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
