--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^4.2.0",
     "@simplewebauthn/browser": "^9.0.1",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
@@ -25,14 +27,18 @@
     "lucide-react": "^0.536.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
+    "next-sanity": "^10.1.0-canary.7",
     "postcss": "8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "sanity": "^4.2.0",
+    "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/hast": "^3.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
